--- a/cudaPadding/cudaPadding.vcxproj
+++ b/cudaPadding/cudaPadding.vcxproj
@@ -152,8 +152,8 @@
     <IncludePath>C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.2\include;D:\git_projects\Preprocessor\cudaCompress\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <LibraryPath>C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.2\lib\x64;D:\git_projects\Preprocessor\boost_1_74_0\stage\lib;$(LibraryPath)</LibraryPath>
-    <IncludePath>C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.2\include;D:\git_projects\Preprocessor\cudaCompress\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.2\lib\x64;$(SolutionDir)Preprocessor\boost_1_74_0\stage\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.2\include;$(SolutionDir)Preprocessor\cudaCompress\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -186,7 +186,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;WIN64;NDEBUG;_CONSOLE;%(PreprocessorDefinitions);NOMINMAX;CUCOMP_BUILD_DLL</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>D:\git_projects\cudaCompress\src;D:\git_projects\Preprocessor\cudaCompress\include;D:\git_projects\Preprocessor\boost_1_74_0;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)cudaCompress\src;$(SolutionDir)Preprocessor\cudaCompress\include;$(SolutionDir)Preprocessor\boost_1_74_0;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
